--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -786,14 +786,6 @@ header.navbar-default{
 		padding-top: 0;
 		padding-right: @margin-movil;
 		padding-left: @margin-movil;
-		h2{
-			margin-top: 40px;
-		    padding-top: 70px;
-			padding-bottom: 0px;
-			padding-left: 0px;
-			padding-right: 0px;
-		    background: url("../images/content/partners.png") no-repeat center top;
-		}
 		.views-field-field-logo{
 			margin: 0 auto 20px auto;
 		}
@@ -832,10 +824,8 @@ header.navbar-default{
 				display: none;
 			}
 			a{
-				width: 100% !important;
-				height: 3.5em;
-				padding: 1em;
 				margin-top: 1em;
+				margin-left: 1em;
 				display: block; 
 				&:before{
 					content: "> ";
