--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1272,6 +1272,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   display: block;
   width: 100%;
 }
+.view-partners .col-md-2 {
+  width: 19.666667%;
+}
 .view-partners div .views-field {
   border-top: none !important;
   border-right: 1px solid #CCC !important;
