--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1434,6 +1434,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	list-style: none;
 	display: block;
 	width: 100%;
+	.col-md-2{
+		width: 19.666667%;
+	}
 	div{
 		.views-field{
 		  border-top: none !important;
