HW20-318 - Homepage: Priority areas and partners detail the lines are missing

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -13382,8 +13382,13 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 .page-communications .back-to-link {
   border: none !important;
   padding-right: 25px;
+  padding-bottom: 25px;
   text-align: left;
   padding-left: 2em;
+}
+.page-partners-documents .region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext,
+.page-communications .region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext {
+  margin-top: 2px;
 }
 .page-partners-documents #views-exposed-form-documents-page-1,
 .page-communications #views-exposed-form-documents-page-1,
@@ -13447,7 +13452,6 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 .page-partners-documents .region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext,
 .page-communications .region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext {
   width: 100% !important;
-  margin-top: -14px;
 }
 .page-partners-documents .region-sidebar-first .views-exposed-widgets .views-submit-button,
 .page-communications .region-sidebar-first .views-exposed-widgets .views-submit-button {
