--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -5593,9 +5593,15 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	.back-to-link{
 		border: none !important;
 		padding-right: 25px;
+		padding-bottom: 25px;
 		text-align: left;
 		padding-left: 2em;
 	}
+
+	.region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext{
+		margin-top: 2px;
+	}
+
 	#views-exposed-form-documents-page-1,
 	#views-exposed-form-documents-page-2{
 		margin-top: 0;
@@ -5646,7 +5652,6 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			}
 			#edit-search-api-views-fulltext{
 				width: 100% !important;
-				margin-top: -14px;
 			}
 			.views-submit-button{
 				position: absolute;
