--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1265,6 +1265,17 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   background: #FFF;
   padding-right: 0.7em;
 }
+#block-views-partners-block-1 h2 {
+  color: #00309d;
+  margin-top: 0;
+  font-weight: 400;
+  background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
+  margin-bottom: 0.5em;
+}
+#block-views-partners-block-1 h2 span {
+  background: #FFF;
+  padding-right: 0.7em;
+}
 .view-partners {
   padding: 1em 0;
   margin: 0;
@@ -1312,10 +1323,10 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 .breadcrumb span a {
   color: #FFF;
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 .breadcrumb span a:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 .breadcrumb span:before {
   padding: 8px;
@@ -6137,13 +6148,14 @@ body.front-page .main-container .newsletter-social-media #newsletter-subscriptio
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-text {
   width: 100%;
   border-radius: 7px;
+  border: 0;
 }
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-submit {
   position: absolute;
   width: 150px;
-  top: 1px;
+  top: 0;
   right: 0;
-  height: 32px;
+  height: 34px;
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
   border-top-left-radius: 0;
@@ -6268,6 +6280,16 @@ body.front-page .main-container .box-before.social-media .otw-slideshare a:befor
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics {
   clear: both;
   padding-top: 2em;
+}
+body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics h2.block-title {
+  position: relative;
+  background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
+  margin-bottom: 1em;
+}
+body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics h2.block-title span {
+  padding-left: 0;
+  padding-right: 0.7em;
+  background: #ffffff;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priority_area ul {
   display: flex;
