--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1284,14 +1284,14 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   width: 100%;
 }
 .view-partners .col-md-2 {
-  width: 19.666667%;
+  width: 20%;
 }
 .view-partners div .views-field {
   border-top: none !important;
-  border-right: 1px solid #CCC !important;
+  border-right: 1px solid #efeff0 !important;
 }
 .view-partners .views-row-1 .views-field {
-  border-left: 1px solid #CCC;
+  border-left: 1px solid #efeff0;
 }
 .view-partners .views-row .views-field-field-logo {
   height: 120px;
@@ -4084,7 +4084,7 @@ body.een .box-type-partner {
 }
 #block-views-partners-block-2 .view-partners .views-row-1 .views-field,
 #block-views-partners-block-3 .view-partners .views-row-1 .views-field {
-  border-left: 1px solid #B0B1B2;
+  border-left: 1px solid #efeff0;
 }
 /* Events */
 .logged-in .page-events #osha-events-dates-form {
@@ -4576,6 +4576,13 @@ ul[data-sa-theme="basic-green"].ui-menu {
   color: #FFF;
   font-weight: 400;
   padding-left: 1.3em;
+}
+#block-osha-newsletter-osha-newsletter-events-subscribe h2 a {
+  font-size: 1em;
+  text-decoration: none;
+}
+#block-osha-newsletter-osha-newsletter-events-subscribe h2 a:hover {
+  text-decoration: underline;
 }
 #block-osha-newsletter-osha-newsletter-events-subscribe a {
   text-decoration: underline;
@@ -5980,6 +5987,9 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .be
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body {
   padding-left: 1em;
+  position: relative;
+  height: 227px;
+  padding-top: 0.5em;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body > span.date-display-single {
   float: none;
@@ -5988,13 +5998,14 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .be
   display: block;
   font-size: 2rem;
   margin-top: 0.7em;
-  margin-bottom: 0.7em;
+  padding-bottom: 0.5em;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body p {
   position: relative;
   padding-bottom: 4em;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body a.more-link {
+  clear: both;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   line-height: 1.42857143;
   font-family: 'Open Sans';
@@ -6011,7 +6022,7 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .be
   transition: 300ms;
   background-position: 110%;
   position: absolute;
-  left: 0;
+  left: 15px;
   bottom: 0;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div .media-body a.more-link:hover {
@@ -6040,6 +6051,9 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .be
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div:nth-child(2) > div.media-body {
   padding-left: 0;
   padding-right: 1em;
+}
+body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div:nth-child(2) a.more-link {
+  left: 0;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) {
   background: url(../images/border-dashed-events.png) repeat-y;
@@ -7747,6 +7761,9 @@ body.page-tools-and-publications-publications ol.multicarousel-indicators li.act
     padding-left: 0;
   }
   /*Home*/
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(1) .box-before.news .view-news .view-content > div:nth-child(2) > div.pull-left {
+    float: left !important;
+  }
   .priority-area-box {
     width: 100%;
   }
