--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -391,6 +391,33 @@
 	}
 
 	/*Home*/
+	body.front-page{ 
+		.main-container {
+			#block-hwc-homepage-hwc-homepage-news-events {
+				.before-the-campaign {
+					.content-box-before {
+						.box-before:nth-child(1) {
+							.box-before.news {
+								.view-news {
+									.view-content{ 
+										> div:nth-child(2) {
+											> div.pull-left{
+												float: left !important;
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+											
+
+
 	.priority-area-box {
 	    width: 100%;
 	}
