--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -13366,6 +13366,19 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 */
 /*End partners public profile*/
 /*Partner documents lists*/
+.page-partners-documents #block-views-exp-documents-gpep.contextual-links-region,
+.page-communications #block-views-exp-documents-gpep.contextual-links-region {
+  margin-top: 0 !important;
+  padding-left: 0;
+}
+.page-partners-documents .contextual-links-region .back-links,
+.page-communications .contextual-links-region .back-links {
+  padding-left: 0;
+}
+.page-partners-documents .region-sidebar-first .contextual-links-region,
+.page-communications .region-sidebar-first .contextual-links-region {
+  margin-top: 0 !important;
+}
 .page-partners-documents h1,
 .page-communications h1 {
   border-bottom: none;
@@ -13386,7 +13399,8 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 }
 .page-partners-documents .region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext,
 .page-communications .region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext {
-  margin-top: 2px;
+  margin-top: 18px;
+  margin-bottom: 16px;
 }
 .page-partners-documents #views-exposed-form-documents-page-1,
 .page-communications #views-exposed-form-documents-page-1,
@@ -13551,6 +13565,7 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
   display: inline-block;
   width: 100%;
   margin-bottom: 25px;
+  margin-top: 35px;
 }
 .page-partners-documents .region.region-content .view-search .view-header .sort-container.col-xs-3,
 .page-communications .region.region-content .view-search .view-header .sort-container.col-xs-3 {
@@ -20509,6 +20524,9 @@ body.front .homepage-slider blockquote.image-field-caption p {
 .footer ul li a {
   color: #ffffff;
   padding-left: 0;
+}
+.footer ul li a:hover {
+  text-decoration: underline;
 }
 .footer ul li :hover,
 .footer ul li :focus {
