--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -5581,6 +5581,24 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 /*Partner documents lists*/
 .page-partners-documents,
 .page-communications{
+
+
+	#block-views-exp-documents-gpep.contextual-links-region{
+		margin-top:0 !important;
+		padding-left: 0;
+	}
+
+	.contextual-links-region{
+		.back-links{
+			padding-left: 0;
+		}
+	}
+
+	.region-sidebar-first .contextual-links-region{
+		margin-top: 0 !important;
+	}
+	
+
 	h1{
 		border-bottom: none;
 		padding-bottom: 0;
@@ -5598,7 +5616,8 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 
 	.region-sidebar-first .views-exposed-widgets #edit-search-api-views-fulltext{
-		margin-top: 2px;
+		margin-top: 18px;
+		margin-bottom: 16px;
 	}
 
 	#views-exposed-form-documents-page-1,
@@ -5737,6 +5756,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			h3{
 				display: none;
 			}
+
 			.view-header{
 			    border: none;
 				border-top: 1px dotted @color3;
@@ -5747,6 +5767,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				display: inline-block;
 				width: 100%;
 				margin-bottom: 25px;
+				margin-top: 35px;
 					.sort-container.col-xs-3{
 						width: 75%;
 						padding-left: 0px;
