--- a/docroot/sites/all/themes/hwc_frontend/less/footer.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/footer.less
@@ -16,6 +16,9 @@
 			a{
 				color: @footer-color;
 				padding-left: 0;
+				&:hover{
+					text-decoration: underline;
+				}
 			}
 			:hover, :focus{
 				background: none;
