--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -1,5 +1,19 @@
 @media (max-width: 480px) { 
 
+	body.front-page {
+		.main-container {
+			#block-views-homepage-banners-block {
+				.view-homepage-banners { 
+					.views-row-last {
+						p{
+							max-width: 280px;
+						}
+					}
+				}
+			}
+		}
+	}
+
 	.page_title h1 {
     	font-size: 2em;
     	width: 320px;
