--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -14,7 +14,7 @@
 				}
 			}
 		}
-		.btn-primary, ol.multicarousel-indicators{
+		.slider--video--items .btn-primary, ol.multicarousel-indicators{
 			display: none;
 		}
 
