--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -11,6 +11,49 @@
 					}
 				}
 			}
+			#block-hwc-homepage-hwc-homepage-news-events {
+				.before-the-campaign {
+					.content-box-before {
+						.box-before:nth-child(1) {
+							.box-before.news {
+								.view-news {
+									.view-content{ 
+										> div:nth-child(1) {
+											> div.pull-left{
+												float: none !important;
+											}
+										}
+										> div:nth-child(2) {
+											> div.pull-left{
+												float: none !important;
+											}
+										}
+									}
+									.media-body{
+										height: auto;
+										padding-bottom: 3em;
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+			.view-recommended-tools-and-resources{
+				.views-row{
+					width: 100%;
+				}
+			}
+			#block-hwc-homepage-hwc-homepage-news-events {
+				.before-the-campaign {
+					.content-box-before {
+						.box-before:nth-child(2){
+							padding-left: 0em;
+						    padding-right: 3em;						
+						}
+					}
+				}
+			}
 		}
 	}
 
@@ -170,5 +213,9 @@
 				left: 62px;
 			}
 		}
+	}
+
+	body.front-page .main-container .newsletter-social-media #block-osha-newsletter-osha-newsletter-image{
+		padding: 0;
 	}
 }
