--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1,5 +1,20 @@
 @media (max-width: 768px){
 
+	body.front-page{
+
+		.newsletter-social-media .newsletter{
+			border-right: 0;
+	    	border-bottom: 1px dashed #FFF;
+	    	padding-bottom: 1em;
+		}
+
+		.main-container{
+			.box-before:nth-child(2){
+				background: transparent;
+			}
+		}
+	}
+
 	.start-browsing .start-browsing-box{
 		width: 309px;
 		height: auto;
@@ -389,34 +404,6 @@
 			padding-left: 0;
 		}
 	}
-
-	/*Home*/
-	body.front-page{ 
-		.main-container {
-			#block-hwc-homepage-hwc-homepage-news-events {
-				.before-the-campaign {
-					.content-box-before {
-						.box-before:nth-child(1) {
-							.box-before.news {
-								.view-news {
-									.view-content{ 
-										> div:nth-child(2) {
-											> div.pull-left{
-												float: left !important;
-											}
-										}
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-	}
-
-											
-
 
 	.priority-area-box {
 	    width: 100%;
