--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -272,6 +272,12 @@
     	padding-bottom: 1em;
 	}
 
+	body.front-page{
+		.newsletter-social-media .newsletter{			
+	    	border-bottom: 0;
+		}
+	}
+
 	/*Publications page*/
 
 	.content-fluid .container{
@@ -922,7 +928,7 @@
 
 	.before-the-campaign .content-box-before .box-before{
 		margin-bottom: 0;
-		margin-left: 1em;
+		margin-left: 0;
 	}
 
 	/* Splash page */
