--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -250,6 +250,11 @@
 
 @media (max-width: 1044px) {
 
+	body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2){
+		padding-left: 0em;
+    	padding-right: 4em;
+	}
+
 	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3){
 		width: 668px;
 		margin-top: 1em;
