Fix CSS accessibility issues

--- a/docroot/sites/all/themes/hwc_frontend/less/variables.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/variables.less
@@ -943,29 +943,28 @@
 	//** Text color of current page in the breadcrumb
 	@breadcrumb-href-color:			@color2;
 	@breadcrumb-active-color:		@color2;
-	@breadcrumb-padding-vertical:   "??";
-	@breadcrumb-padding-horizontal:	"??";
+		@breadcrumb-padding-vertical: 1px;
+	@breadcrumb-padding-horizontal: 1px;
 	//** Breadcrumb background color
-	@breadcrumb-bg:                 "??";
+	@breadcrumb-bg: @color2;
 	//** Textual separator for between breadcrumb elements
 	@breadcrumb-separator:          ">";
 
 //== Pagination
 //
 //##
-	@pagination-bg:						"??";
-	@pagination-border:					"??";
+	@pagination-bg: @color2;
+	@pagination-border: @color2;
+	@pagination-hover-color: @color2;
+	@pagination-hover-bg: @color2;
+	@pagination-hover-border: @color2;
 
-	@pagination-hover-color:			"??";
-	@pagination-hover-bg:				"??";
-	@pagination-hover-border:			"??";
+	@pagination-active-bg: @color2;
+	@pagination-active-border: @color2;
 
-	@pagination-active-bg:				"??";
-	@pagination-active-border:			"??";
-
-	@pagination-disabled-color:			"??";
-	@pagination-disabled-bg:			"??";
-	@pagination-disabled-border:		"??";
+	@pagination-disabled-color: @color2;
+	@pagination-disabled-bg: @color2;
+	@pagination-disabled-border: @color2;
 
 	@pagination-color:				@color2;
 	@pagination-active-color:		@color5;
