--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -4587,10 +4587,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #444444;
 }
 .breadcrumb {
-  padding: "??" "??";
+  padding: 1px 1px;
   margin-bottom: 20px;
   list-style: none;
-  background-color: "??";
+  background-color: #003399;
   border-radius: 4px;
 }
 .breadcrumb > li {
@@ -4621,8 +4621,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   line-height: 1.42857143;
   text-decoration: none;
   color: #003399;
-  background-color: "??";
-  border: 1px solid "??";
+  background-color: #003399;
+  border: 1px solid #003399;
   margin-left: -1px;
 }
 .pagination > li:first-child > a,
@@ -4640,9 +4640,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: "??";
-  background-color: "??";
-  border-color: "??";
+  color: #003399;
+  background-color: #003399;
+  border-color: #003399;
 }
 .pagination > .active > a,
 .pagination > .active > span,
@@ -4652,8 +4652,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #575757;
-  background-color: "??";
-  border-color: "??";
+  background-color: #003399;
+  border-color: #003399;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4662,9 +4662,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .disabled > a,
 .pagination > .disabled > a:hover,
 .pagination > .disabled > a:focus {
-  color: "??";
-  background-color: "??";
-  border-color: "??";
+  color: #003399;
+  background-color: #003399;
+  border-color: #003399;
   cursor: not-allowed;
 }
 .pagination-lg > li > a,
@@ -4710,14 +4710,14 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager li > span {
   display: inline-block;
   padding: 5px 14px;
-  background-color: "??";
-  border: 1px solid "??";
+  background-color: #003399;
+  border: 1px solid #003399;
   border-radius: 15px;
 }
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
-  background-color: "??";
+  background-color: #003399;
 }
 .pager .next > a,
 .pager .next > span {
@@ -4731,8 +4731,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pager .disabled > a:hover,
 .pager .disabled > a:focus,
 .pager .disabled > span {
-  color: "??";
-  background-color: "??";
+  color: #003399;
+  background-color: #003399;
   cursor: not-allowed;
 }
 .label {
@@ -6057,9 +6057,6 @@ button.close {
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    -moz-perspective: 1000;
-    perspective: 1000;
   }
   .carousel-inner > .item.next,
   .carousel-inner > .item.active.right {
@@ -17849,7 +17846,6 @@ input#edit-field-image-und-0-upload::before {
 }
 .page-publications .view-publication-type .views-row:hover .views-field-description-field .field-content {
   display: block;
-  filter: scale(1000);
 }
 .page-publications .view-publication-type .views-row .views-field-description-field {
   padding: 15px;
@@ -18270,8 +18266,6 @@ input#edit-field-image-und-0-upload::before {
   width: 100%;
   height: 360px;
   overflow: hidden;
-  padding-right: -15px;
-  padding-left: -15px;
 }
 .page-good-practice-exchange .panels-flexible-region-inside > .pane-node-title-field .field-name-title-field {
   position: absolute;
@@ -22548,10 +22542,6 @@ body.front .homepage-slider blockquote.image-field-caption p {
     padding-right: 30px;
     padding-left: 30px;
   }
-  .breadcrumb {
-    padding-right: 30px;
-    padding-left: 30px;
-  }
   h1 {
     padding-right: 15px;
     padding-left: 15px;
@@ -22775,8 +22765,6 @@ body.front .homepage-slider blockquote.image-field-caption p {
     width: 100%;
     height: 360px;
     overflow: hidden;
-    padding-right: -15px;
-    padding-left: -15px;
   }
   .page-good-practice-exchange .panels-flexible-region-inside > .pane-node-title-field .field-name-title-field {
     position: absolute;
@@ -26025,8 +26013,6 @@ body.front .homepage-slider blockquote.image-field-caption p {
     width: 100%;
     height: 200px;
     overflow: hidden;
-    padding-right: -15px;
-    padding-left: -15px;
   }
   .page-good-practice-exchange .panels-flexible-region-inside > .pane-node-title-field .field-name-title-field {
     position: absolute;
