--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7410,6 +7410,7 @@ body.page-tools-and-publications-publications{
 						background: #daea96;
 						height: 100%;
 	    				cursor: pointer;
+	    				border: 0;
 	    				&:hover{
 					    	img{
 					    		opacity: 0.8;
